optimize versioning and repair test