@@ -13,7 +13,7 @@
 
     <groupId>pmeig.spring.libraries</groupId>
     <artifactId>spring-parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>pom</packaging>
 
     <contributors>
@@ -40,15 +40,28 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.test-plugin.version>2.22.2</maven.test-plugin.version>
-        <java.version>25</java.version>
+        <java.version>26</java.version>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <maven.compiler.source>${java.version}</maven.compiler.source>
-        <maven.source-plugin.version>3.4.0</maven.source-plugin.version>
-        <junit.version>5.10.0</junit.version>
         <kotlin.code.style>official</kotlin.code.style>
         <kotlin.compiler.jvmTarget>25</kotlin.compiler.jvmTarget>
-        <kotlin.version>2.3.0</kotlin.version>
+        <argLine> </argLine>
+
+
+        <maven.test-plugin.version>3.5.6</maven.test-plugin.version>
+        <maven.source-plugin.version>3.4.0</maven.source-plugin.version>
+
+        <mokito-kotlin.version>6.3.0</mokito-kotlin.version>
+        <google-gcp.version>8.0.4</google-gcp.version>
+
+        <pmeig-swagger.version>1.0.0-SNAPSHOT</pmeig-swagger.version>
+        <pmeig-logger.version>1.0.0-SNAPSHOT</pmeig-logger.version>
+        <pmeig-cache.version>1.0.0-SNAPSHOT</pmeig-cache.version>
+        <pmeig-security.version>1.0.0-SNAPSHOT</pmeig-security.version>
+        <pmeig-jpa.version>1.0.0-SNAPSHOT</pmeig-jpa.version>
+        <pmeig-error.version>1.0.0-SNAPSHOT</pmeig-error.version>
+
+        <kotlin.version>2.3.21</kotlin.version>
         <kotlin.test.skip>false</kotlin.test.skip>
         <kotlin.source.skip>false</kotlin.source.skip>
     </properties>
@@ -80,7 +93,7 @@
             <dependency>
                 <groupId>com.google.cloud</groupId>
                 <artifactId>spring-cloud-gcp-dependencies</artifactId>
-                <version>8.0.1</version>
+                <version>${google-gcp.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -99,6 +112,8 @@
                     <version>${maven.test-plugin.version}</version>
                     <configuration>
                         <skipTests>${kotlin.test.skip}</skipTests>
+                        <!--suppress UnresolvedMavenProperty -->
+                        <argLine>@{argLine} -javaagent:${org.mockito:mockito-core:jar} -XX:+EnableDynamicAgentLoading</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -171,7 +186,7 @@
             <plugin>
                 <groupId>pmeig.plugins</groupId>
                 <artifactId>additional-metadata</artifactId>
-                <version>1.0.0-SNAPSHOT</version>
+                <version>1.0.0</version>
                 <executions>
                     <execution>
                         <id>scan-metadata</id>
@@ -204,9 +219,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>@{argLine} -javaagent:${org.mockito:mockito-core:jar}</argLine>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -238,7 +250,7 @@
         <dependency>
             <groupId>org.mockito.kotlin</groupId>
             <artifactId>mockito-kotlin</artifactId>
-            <version>6.3.0</version>
+            <version>${mokito-kotlin.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
